# m-and-a-underwriter

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: target_acme.json
src/m_and_a_underwriter/: __init__.py  __main__.py  agent.py  app.py  lbo.py  schema.py  workbook.py
tests/: test_lbo.py
