[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m-and-a-underwriter"
version = "0.1.0"
description = "CIM PDF → LBO model + IC memo. Full debt cascade, accretion/dilution, IRR/MOIC."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sheharyar Monnoo" }]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "openai>=1.30",
  "anthropic>=0.25",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "python-dotenv>=1.0",
  "streamlit>=1.35",
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
